# chat-tui

./: Cargo.toml  conversation_cache.json  readme.md
src/: main.rs
src/application/: services.rs
src/domain/: mod.rs  model.rs
src/infrastructure/: http_client.rs
src/presentation/: controllers.rs  mod.rs  tui.rs
